--- a/task1/css/task0001.css
+++ b/task1/css/task0001.css
@@ -6,6 +6,7 @@
 .yellow{color: yellow;}
 .bg_black{background-color: black;}
 .border{border: 2px solid red;}
+.w100 {width: 100px;}
 .center1 {
     background-color: red;
     width: 960px;
